Bug 1041419 - Patch 2: Replace PBrowser with PBrowserOrId in PWyciwygChannel. r=honzab